--- a/oldindex.html
+++ b/oldindex.html
@@ -7,29 +7,29 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="">
 		<meta name="author" content="HESTAdivest">
-		<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/manifest.json">
+		<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="manifest.json">
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
 		<title>HESTA divest</title>
 		<!-- Bootstrap core CSS -->
 		<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-		<link href="/css/lavish-bootstrap.css" rel="stylesheet">
+		<link href="css/lavish-bootstrap.css" rel="stylesheet">
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-		<link href="/css/custom.css" rel="stylesheet">
+		<link href="css/custom.css" rel="stylesheet">
 		<script src="./js/ie-emulation-modes-warning.js"></script>
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 		<script src="./js/ie10-viewport-bug-workaround.js"></script>
@@ -50,21 +50,21 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/index.html"><strong>#HESTAdivest</strong></a>
+					<a class="navbar-brand" href="index.html"><strong>#HESTAdivest</strong></a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li><a href="https://www.facebook.com/hestadivest" target="_blank"><i class="fa fa-facebook-official fa-lg lurid-green"></i></a></li>
 						<li><a href="https://twitter.com/search?q=%23HESTAdivest" target="_blank"><i class="fa fa-twitter fa-lg lurid-green"></i></a></li>
-						<li><a href="/about.html" class="active">About</a></li>
-						<li><a href="/board.html" class="active">HESTA Board</a></li>
-						<li><a href="/write.html" class="active">Write</a></li>
-						<li><a href="/resources.html" class="active">Resources</a></li>
-						<li><a href="/endorsements.html" class="active">Endorsements</a></li>
+						<li><a href="about.html" class="active">About</a></li>
+						<li><a href="board.html" class="active">HESTA Board</a></li>
+						<li><a href="write.html" class="active">Write</a></li>
+						<li><a href="resources.html" class="active">Resources</a></li>
+						<li><a href="endorsements.html" class="active">Endorsements</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="/contact.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
@@ -116,7 +116,7 @@
 					<p><h2>Is your super with HESTA?</h2></p>
 					<ul>
 						<!--<li><a href="#pledge">Pledge</a> to be one of 5,000 members of HESTA who will write to HESTA to call for divestment from Transfield Services.</li>-->
-						<li><a href="/write.html">Write</a> to HESTA today.</li>
+						<li><a href="write.html">Write</a> to HESTA today.</li>
 						<li>Speak to colleagues, friends and family members who are also members of HESTA or who have connections with HESTA.</li>
 						<li>Spread the word and get involved!</li>
 					</ul>
@@ -128,7 +128,7 @@
 						<li>Health Services Union (HSU)</li>
 						<li>United Voice</li>
 					</ul>
-					<p>Ask your Union to pass a motion calling on HESTA to divest from mandatory detention through Transfield. See a sample divestment motion <a href="/write.html">here</a> and <a href="/contact.html">get in touch</a> if you can get involved.</p>
+					<p>Ask your Union to pass a motion calling on HESTA to divest from mandatory detention through Transfield. See a sample divestment motion <a href="write.html">here</a> and <a href="contact.html">get in touch</a> if you can get involved.</p>
 					<p><h2>Other organisations on the Board of HESTA</h2></p>
 					<p>Other organisations on the Board of HESTA are:</p>
 					<ul>
@@ -138,12 +138,12 @@
 						<li>Catholic Health Australia</li>
 						<li>Leading Aged Services Australia</li>
 					</ul>
-					<p>If you have contacts at these organisations that may be interested in getting involved, please <a href="/contact.html">get in touch</a>.</p>
+					<p>If you have contacts at these organisations that may be interested in getting involved, please <a href="contact.html">get in touch</a>.</p>
 					<p><h2>Please spread the word and get involved!</h2></p>
 					<p><a href="https://www.facebook.com/hestadivest" target="_blank">Like</a> and share the campaign on Facebook, and <a href="https://twitter.com/search?q=%23HESTAdivest" target="_blank">tweet your support</a> using the #HESTAdivest hashtag on Twitter.</p>
-					<p><a href="/contact.html">Contact us</a> to get involved and help spread the word!</a></p>
+					<p><a href="contact.html">Contact us</a> to get involved and help spread the word!</a></p>
 					<div>
-						<h2>Click <a href="/resources/hesta-divest-briefing.pdf" target="_blank">here</a> for a copy of our new briefing [PDF].</h2>
+						<h2>Click <a href="resources/hesta-divest-briefing.pdf" target="_blank">here</a> for a copy of our new briefing [PDF].</h2>
 					</div>
 					<div class="top-spacer jumbotron custom-outset">
 						<div class="well">
