--- a/comingsoon.html
+++ b/comingsoon.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="HESTA divest">
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-		<link rel="shortcut icon" href="/favicon.ico?v=2" />
+		<link rel="shortcut icon" href="favicon.ico?v=2" />
 		<title>HESTA divest</title>
 
 		<!-- Bootstrap core CSS -->
