--- a/write.html
+++ b/write.html
@@ -7,29 +7,29 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="">
 		<meta name="author" content="HESTAdivest">
-		<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/manifest.json">
+		<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="manifest.json">
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
 		<title>Write | HESTA divest</title>
 		<!-- Bootstrap core CSS -->
 		<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-		<link href="/css/lavish-bootstrap.css" rel="stylesheet">
+		<link href="css/lavish-bootstrap.css" rel="stylesheet">
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-		<link href="/css/custom.css" rel="stylesheet">
+		<link href="css/custom.css" rel="stylesheet">
 		<script src="./js/ie-emulation-modes-warning.js"></script>
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 		<script src="./js/ie10-viewport-bug-workaround.js"></script>
@@ -50,21 +50,21 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/index.html"><strong>#HESTAdivest</strong></a>
+				<a class="navbar-brand" href="index.html"><strong>#HESTAdivest</strong></a>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li><a href="https://www.facebook.com/hestadivest" target="_blank"><i class="fa fa-facebook-official fa-lg lurid-green"></i></a></li>
 					<li><a href="https://twitter.com/search?q=%23HESTAdivest" target="_blank"><i class="fa fa-twitter fa-lg lurid-green"></i></a></li>
-					<li><a href="/about.html" class="active">About</a></li>
-					<li><a href="/board.html" class="active">HESTA Board</a></li>
-					<li><a href="/write.html" class="active">Write</a></li>
-					<li><a href="/resources.html" class="active">Resources</a></li>
-					<li><a href="/endorsements.html" class="active">Endorsements</a></li>
+					<li><a href="about.html" class="active">About</a></li>
+					<li><a href="board.html" class="active">HESTA Board</a></li>
+					<li><a href="write.html" class="active">Write</a></li>
+					<li><a href="resources.html" class="active">Resources</a></li>
+					<li><a href="endorsements.html" class="active">Endorsements</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/contact.html">Contact</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
@@ -81,7 +81,7 @@
 				<div class="col-md-12">
 					<p><h2>Is your super with HESTA?</h2></p>
 					<p><Write to HESTA today to call for an end to the involvement of HESTA and your retirement savings in mandatory detention.</p>
-					<p>Download a sample member’s letter to HESTA <a href="/resources/sample-members-letter.docx">here</a>.</p>
+					<p>Download a sample member’s letter to HESTA <a href="resources/sample-members-letter.docx">here</a>.</p>
 					<p>Email your letter to: <a href="mailto:hesta@hesta.com.au">hesta@hesta.com.au</a>. Write to the CEO Debby Blakey and CC Cheryl Macnaught, General Manager of Client Relationships.</p>
 					<p>You can also post your letter to: PO Box 600, Carlton South VIC 3053.</p>
 					<p><h2>Are you a member of the ANMF, ASU, HSU or United Voice?</h2></p>
@@ -96,9 +96,9 @@
 					<p><h3>For members of the Australian Services Union</h3></p>
 					<p>In March 2014, the Australian Services Union (ASU), one of the Unions with membership on HESTA’s Board, made the following announcement:
 					<blockquote>“The ASU National Executive calls for HESTA to divest from Transfield Services. Social and community workers do not want their retirement savings used to support a system of mandatory detention of asylum seekers and believe it is immoral for corporations to profit from the indefinite and inhuman detention of other human beings. We also note that Transfield has no experience or background in welfare. We undertake to advocate this position to HESTA Board and to also provide our members with information on how to take individual action to ensure their money is not being invested in Transfield by exercising investment choice within the fund.”</blockquote></p>
-					<p>If you are an ASU member, a sample motion that could be passed at branch meetings is <a href="/resources/asu-divestment-motion.docx">here</a>.</p>
+					<p>If you are an ASU member, a sample motion that could be passed at branch meetings is <a href="resources/asu-divestment-motion.docx">here</a>.</p>
 					<p><h3>For members of the Australian Nursing and Midwifery Federation, Health Services Union and United Voice</h3></p>
-					<p>If you are a member of the ANMF, HSU or United Voice, a sample motion that could be passed at branch meetings is <a href="/resources/sample-divestment-motion-v1.1.docx">here</a>.</p>
+					<p>If you are a member of the ANMF, HSU or United Voice, a sample motion that could be passed at branch meetings is <a href="resources/sample-divestment-motion-v1.1.docx">here</a>.</p>
 					<p><h2>Other organisations on the Board of HESTA</h2></p>
 					<p>Other organisations on the Board of HESTA are:</p>
 					<ul>
@@ -108,7 +108,7 @@
 						<li>Catholic Health Australia</li>
 						<li>Leading Aged Services Australia</li>
 					</ul>
-					<p>Do you have contacts at these organisations that may be willing to help call on HESTA to divest from mandatory detention? Please <a href="/contact.html">get in touch</a>.</p>
+					<p>Do you have contacts at these organisations that may be willing to help call on HESTA to divest from mandatory detention? Please <a href="contact.html">get in touch</a>.</p>
 					<div class="top-spacer jumbotron custom-outset">
 						<div class="well">
 							<h1>HESTA divest.</h1>
