--- a/endorsements.html
+++ b/endorsements.html
@@ -57,14 +57,14 @@
 				<ul class="nav navbar-nav">
 					<li><a href="https://www.facebook.com/hestadivest" target="_blank"><i class="fa fa-facebook-official fa-lg lurid-green"></i></a></li>
 					<li><a href="https://twitter.com/search?q=%23HESTAdivest" target="_blank"><i class="fa fa-twitter fa-lg lurid-green"></i></a></li>
-					<li><a href="/about.html" class="active">About</a></li>
-					<li><a href="/board.html" class="active">HESTA Board</a></li>
-					<li><a href="/write.html" class="active">Write</a></li>
-					<li><a href="/resources.html" class="active">Resources</a></li>
-					<li><a href="/endorsements.html" class="active">Endorsements</a></li>
+					<li><a href="about.html" class="active">About</a></li>
+					<li><a href="board.html" class="active">HESTA Board</a></li>
+					<li><a href="write.html" class="active">Write</a></li>
+					<li><a href="resources.html" class="active">Resources</a></li>
+					<li><a href="endorsements.html" class="active">Endorsements</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/contact.html">Contact</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
@@ -80,7 +80,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<p><h2>Endorsements</h2></p>
-					<p>Please <a href="/contact.html">contact us</a> if you, your workplace or your organisation wishes to endorse the campaign calling on HESTA to divest from mandatory detention.</p>
+					<p>Please <a href="contact.html">contact us</a> if you, your workplace or your organisation wishes to endorse the campaign calling on HESTA to divest from mandatory detention.</p>
 					<div class="top-spacer jumbotron custom-outset">
 						<div class="well">
 							<h1>HESTA divest.</h1>
