--- a/oldindex.html
+++ b/oldindex.html
@@ -57,14 +57,14 @@
 					<ul class="nav navbar-nav">
 						<li><a href="https://www.facebook.com/hestadivest" target="_blank"><i class="fa fa-facebook-official fa-lg lurid-green"></i></a></li>
 						<li><a href="https://twitter.com/search?q=%23HESTAdivest" target="_blank"><i class="fa fa-twitter fa-lg lurid-green"></i></a></li>
-						<li><a href="/about.html" class="active">About</a></li>
-						<li><a href="/board.html" class="active">HESTA Board</a></li>
-						<li><a href="/write.html" class="active">Write</a></li>
-						<li><a href="/resources.html" class="active">Resources</a></li>
-						<li><a href="/endorsements.html" class="active">Endorsements</a></li>
+						<li><a href="about.html" class="active">About</a></li>
+						<li><a href="board.html" class="active">HESTA Board</a></li>
+						<li><a href="write.html" class="active">Write</a></li>
+						<li><a href="resources.html" class="active">Resources</a></li>
+						<li><a href="endorsements.html" class="active">Endorsements</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="/contact.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
@@ -116,7 +116,7 @@
 					<p><h2>Is your super with HESTA?</h2></p>
 					<ul>
 						<!--<li><a href="#pledge">Pledge</a> to be one of 5,000 members of HESTA who will write to HESTA to call for divestment from Transfield Services.</li>-->
-						<li><a href="/write.html">Write</a> to HESTA today.</li>
+						<li><a href="write.html">Write</a> to HESTA today.</li>
 						<li>Speak to colleagues, friends and family members who are also members of HESTA or who have connections with HESTA.</li>
 						<li>Spread the word and get involved!</li>
 					</ul>
@@ -128,7 +128,7 @@
 						<li>Health Services Union (HSU)</li>
 						<li>United Voice</li>
 					</ul>
-					<p>Ask your Union to pass a motion calling on HESTA to divest from mandatory detention through Transfield. See a sample divestment motion <a href="/write.html">here</a> and <a href="/contact.html">get in touch</a> if you can get involved.</p>
+					<p>Ask your Union to pass a motion calling on HESTA to divest from mandatory detention through Transfield. See a sample divestment motion <a href="write.html">here</a> and <a href="contact.html">get in touch</a> if you can get involved.</p>
 					<p><h2>Other organisations on the Board of HESTA</h2></p>
 					<p>Other organisations on the Board of HESTA are:</p>
 					<ul>
@@ -138,12 +138,12 @@
 						<li>Catholic Health Australia</li>
 						<li>Leading Aged Services Australia</li>
 					</ul>
-					<p>If you have contacts at these organisations that may be interested in getting involved, please <a href="/contact.html">get in touch</a>.</p>
+					<p>If you have contacts at these organisations that may be interested in getting involved, please <a href="contact.html">get in touch</a>.</p>
 					<p><h2>Please spread the word and get involved!</h2></p>
 					<p><a href="https://www.facebook.com/hestadivest" target="_blank">Like</a> and share the campaign on Facebook, and <a href="https://twitter.com/search?q=%23HESTAdivest" target="_blank">tweet your support</a> using the #HESTAdivest hashtag on Twitter.</p>
-					<p><a href="/contact.html">Contact us</a> to get involved and help spread the word!</a></p>
+					<p><a href="contact.html">Contact us</a> to get involved and help spread the word!</a></p>
 					<div>
-						<h2>Click <a href="/resources/hesta-divest-briefing.pdf" target="_blank">here</a> for a copy of our new briefing [PDF].</h2>
+						<h2>Click <a href="resources/hesta-divest-briefing.pdf" target="_blank">here</a> for a copy of our new briefing [PDF].</h2>
 					</div>
 					<div class="top-spacer jumbotron custom-outset">
 						<div class="well">
