--- a/comingsoon.html
+++ b/comingsoon.html
@@ -12,8 +12,8 @@
 		<title>HESTA divest</title>
 
 		<!-- Bootstrap core CSS -->
-		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-		<script src="./js/ie-emulation-modes-warning.js"></script>i
+		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+		<script src="js/ie-emulation-modes-warning.js"></script>i
 		<style type="text/css">
 			.top-spacer {
 				margin-top: 50px; 
@@ -25,7 +25,7 @@
 		</style>
 
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-		<script src="./js/ie10-viewport-bug-workaround.js"></script>
+		<script src="js/ie10-viewport-bug-workaround.js"></script>
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
@@ -44,12 +44,12 @@
 			</div>
 		</div>
 
-		<script src="./js/jquery.min.js"></script>
-		<script src="./js/bootstrap.min.js"></script>
-		<script src="./js/react.min.js"></script>
-		<script src="./js/firebase.js"></script>
-		<!--<script src="./js/out/goog/base.js" type="text/javascript"></script>
-		<script src="./js/f4f.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/react.min.js"></script>
+		<script src="js/firebase.js"></script>
+		<!--<script src="js/out/goog/base.js" type="text/javascript"></script>
+		<script src="js/f4f.js"></script>
 		<script type="text/javascript">goog.require("f4f");</script>-->
 	</body>
 </html>
