--- a/pledge.html
+++ b/pledge.html
@@ -28,11 +28,11 @@
 		<!-- Bootstrap core CSS -->
 		<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		<link href="css/lavish-bootstrap.css" rel="stylesheet">
-		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/custom.css" rel="stylesheet">
-		<script src="./js/ie-emulation-modes-warning.js"></script>
+		<script src="js/ie-emulation-modes-warning.js"></script>
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-		<script src="./js/ie10-viewport-bug-workaround.js"></script>
+		<script src="js/ie10-viewport-bug-workaround.js"></script>
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -72,7 +72,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="custom-outset">
-						<img class="image-full-width" src="/img/hesta_divest_ruler.png"/>
+						<img class="image-full-width" src="img/hesta_divest_ruler.png"/>
 					</div>
 				</div>
 			</div>
@@ -142,14 +142,14 @@
 				</div>
 			</div>
 		</div><!--container-->
-		<script src="./js/jquery.min.js"></script>
-		<script src="./js/bootstrap.min.js"></script>
-		<!--<script src="./js/react.min.js"></script>
-		<script src="./js/firebase.js"></script>-->
-		<!--<script src="./js/out/goog/base.js" type="text/javascript"></script>
-		<script src="./js/f4f.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<!--<script src="js/react.min.js"></script>
+		<script src="js/firebase.js"></script>-->
+		<!--<script src="js/out/goog/base.js" type="text/javascript"></script>
+		<script src="js/f4f.js"></script>
 		<script type="text/javascript">goog.require("f4f");</script>-->
-		<script src = "/js/footnotes.js" type="text/javascript"></script>
+		<script src = "js/footnotes.js" type="text/javascript"></script>
 	</body>
 </html>
 
